--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,78 @@
+annotated-types==0.7.0
+anyio==4.12.0
+beautifulsoup4==4.14.3
 blinker==1.9.0
+cachetools==6.2.4
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.3.0
+cloudpickle==3.1.2
+distro==1.9.0
+dotenv==0.9.9
+filelock==3.20.0
 Flask==3.1.2
+fsspec==2025.12.0
+google==3.0.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.45.0
+google-auth-httplib2==0.3.0
+google-genai==1.56.0
+google-generativeai==0.8.6
+googleapis-common-protos==1.72.0
+grpcio==1.76.0
+grpcio-status==1.71.2
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.31.0
+httpx==0.28.1
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.2
+llvmlite==0.46.0
 MarkupSafe==3.0.3
+mpmath==1.3.0
+networkx==3.6.1
+numba==0.63.1
 numpy==2.3.3
+nvidia-nccl-cu12==2.28.9
+packaging==25.0
 pandas==2.3.3
+pillow==12.0.0
+proto-plus==1.27.0
+protobuf==5.29.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
+requests==2.32.5
+rsa==4.9.1
 scikit-learn==1.7.2
 scipy==1.16.2
+setuptools==80.9.0
+shap==0.50.0
 six==1.17.0
+slicer==0.0.8
+sniffio==1.3.1
+soupsieve==2.8
+sympy==1.14.0
+tenacity==9.1.2
 threadpoolctl==3.6.0
+torch==2.9.1+cpu
+torchvision==0.24.1+cpu
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.6.2
+websockets==15.0.1
 Werkzeug==3.1.3
+wheel==0.45.1
 xgboost==3.0.5
